--- a/components/product/ProductCard/ProductCard.module.css
+++ b/components/product/ProductCard/ProductCard.module.css
@@ -1,4 +1,3 @@
-
 .root {
   @apply relative;
   max-height: 100% !important;
@@ -9,13 +8,12 @@
     }
 
     & .productImage {
-      transform: scale(1.15);
     }
   }
 
-  &:nth-child(6n + 1) .productBg {
-    @apply bg-violet;
-  }
+  /* &:nth-child(6n + 1) .productBg {
+    @apply ;
+  } */
 
   &:nth-child(6n + 3) .productBg {
     @apply bg-pink;
@@ -31,7 +29,7 @@
 }
 
 .productImage {
-  @apply transition-transform duration-500 block;
+  @apply transition-transform duration-500 rounded-lg;
 }
 
 .productBg {
@@ -39,9 +37,8 @@
   background-color: #212529;
 
   &:before {
-    @apply transition-transform duration-500 block w-full h-full bg-repeat-space;
+    @apply transition-transform duration-500 block  bg-repeat-space;
     content: "";
-    background-image: url("/product-pattern-bg.svg");
   }
 }
 
@@ -55,16 +52,16 @@
 }
 
 .productTitle {
-  @apply font-bold;
+  @apply font-bold pb-80;
   line-height: 2.2em;
 
   & span {
-    @apply py-4 px-6 bg-primary;
+    @apply py-4 px-6;
     box-decoration-break: clone;
   }
 }
 
 .productPrice {
-  @apply bg-primary pb-4 pt-2 px-6 font-semibold text-sm;
+  @apply bg-primary pl-2  pb-2 pt-2 px-2 font-semibold text-sm;
   letter-spacing: 0.4px;
 }
