--- a/components/product/Swatch/Swatch.module.css
+++ b/components/product/Swatch/Swatch.module.css
@@ -1,7 +1,7 @@
 .root {
   @apply bg-secondary text-accents-1 cursor-pointer px-10 leading-6 font-semibold
   uppercase py-4 items-center;
-  @apply h-12 w-12 bg-primary text-primary rounded-full mr-3 inline-flex
+  @apply h-12 w-12 bg-primary text-primary rounded-sm mr-3 inline-flex
   items-center justify-center transition duration-150 ease-in-out
   p-0 shadow-none border-gray-200 border box-border;
 
@@ -36,7 +36,8 @@
 }
 
 .active {
-  &.size, &.color {
+  &.size,
+  &.color {
     @apply border-accents-9 border-2;
   }
 }
